--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Go throught Tophatter orders and it refund them if certain criteria are meant ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha|| true"
   },
   "keywords": [
     "Tophatter",
